BootFlasher: UI progress

--- a/chrome/bootflasher/main.html
+++ b/chrome/bootflasher/main.html
@@ -21,6 +21,8 @@
 		<script type="text/javascript" src="./ngapp/BootFlasher.js"></script>
 		<script type="text/javascript" src="./ngapp/BoardSelectController.js"></script>
 		<script type="text/javascript" src="./ngapp/OperationSelectController.js"></script>
+		<script type="text/javascript" src="./ngapp/FlashFirmwareController.js"></script>
+		<script type="text/javascript" src="./ngapp/FlashBootloaderController.js"></script>
 	</head>
 	<body>
 		<!--div id="header">
